[gd_scene load_steps=53 format=3 uid="uid://cyq5u0q10mvmn"]

[ext_resource type="Script" path="res://nodes/minigames/honey/player_script_honey.gd" id="1_p3yar"]
[ext_resource type="Texture2D" uid="uid://b2m6ll7b66ncr" path="res://assets/placeholders/idle_down/idle_down1.png" id="2_vkvhv"]
[ext_resource type="Texture2D" uid="uid://d08jhb4o7b2t6" path="res://assets/placeholders/idle_down/idle_down2.png" id="3_uamsv"]
[ext_resource type="Texture2D" uid="uid://pu5g4iqa3mng" path="res://assets/placeholders/idle_down/idle_down3.png" id="4_648ut"]
[ext_resource type="Texture2D" uid="uid://kug3ewi0fstq" path="res://assets/placeholders/idle_down/idle_down4.png" id="5_1vi6g"]
[ext_resource type="Texture2D" uid="uid://bqugd47newb2l" path="res://assets/placeholders/idle_left/idle_left1.png" id="6_7qea7"]
[ext_resource type="Texture2D" uid="uid://dfcpsortgltxw" path="res://assets/placeholders/idle_left/idle_left2.png" id="7_v5uwg"]
[ext_resource type="Texture2D" uid="uid://dm177txbb7wr4" path="res://assets/placeholders/idle_left/idle_left3.png" id="8_ia44y"]
[ext_resource type="Texture2D" uid="uid://dqa51akxh3w8c" path="res://assets/placeholders/idle_left/idle_left4.png" id="9_bfujb"]
[ext_resource type="Texture2D" uid="uid://ymmb1bcmw78e" path="res://assets/placeholders/idle_right/idle_right1.png" id="10_ajheo"]
[ext_resource type="Texture2D" uid="uid://cuetqyunxbsiq" path="res://assets/placeholders/idle_right/idle_right2.png" id="11_pq2pb"]
[ext_resource type="Texture2D" uid="uid://dq707jmcnngqu" path="res://assets/placeholders/idle_right/idle_right3.png" id="12_t5au2"]
[ext_resource type="Texture2D" uid="uid://bp4lkgjo7qdfm" path="res://assets/placeholders/idle_right/idle_right4.png" id="13_81aoj"]
[ext_resource type="Texture2D" uid="uid://gqlohiy7os46" path="res://assets/placeholders/idle_up/idle_up1.png" id="14_8o83q"]
[ext_resource type="Texture2D" uid="uid://byim7q0xtv21k" path="res://assets/placeholders/idle_up/idle_up2.png" id="15_qr2d7"]
[ext_resource type="Texture2D" uid="uid://dcreyi5vd36sx" path="res://assets/placeholders/idle_up/idle_up3.png" id="16_ckifb"]
[ext_resource type="Texture2D" uid="uid://c1snqbog61qy0" path="res://assets/placeholders/idle_up/idle_up4.png" id="17_vf4nu"]
[ext_resource type="Texture2D" uid="uid://bfmmnrv2fb8mo" path="res://assets/placeholders/walk_down/walk_down1.png" id="18_bk7c1"]
[ext_resource type="Texture2D" uid="uid://be2oyw8xw1vsj" path="res://assets/placeholders/walk_down/walk_down2.png" id="19_mvbx2"]
[ext_resource type="Texture2D" uid="uid://c48nn0yfo1tmn" path="res://assets/placeholders/walk_down/walk_down3.png" id="20_tlutl"]
[ext_resource type="Texture2D" uid="uid://c1i0bm6pdc502" path="res://assets/placeholders/walk_down/walk_down4.png" id="21_38now"]
[ext_resource type="Texture2D" uid="uid://bm6aevxnswd0r" path="res://assets/placeholders/walk_down/walk_down5.png" id="22_eg6pt"]
[ext_resource type="Texture2D" uid="uid://ckmd3tubnytrr" path="res://assets/placeholders/walk_down/walk_down6.png" id="23_jc55p"]
[ext_resource type="Texture2D" uid="uid://bnirggs55k01e" path="res://assets/placeholders/walk_down/walk_down7.png" id="24_wjnsm"]
[ext_resource type="Texture2D" uid="uid://8hqjahwrgybs" path="res://assets/placeholders/walk_down/walk_down8.png" id="25_vykl2"]
[ext_resource type="Texture2D" uid="uid://bv72oihn8agk2" path="res://assets/placeholders/walk_left/walk_left1.png" id="26_bepsa"]
[ext_resource type="Texture2D" uid="uid://c8g7yfxu5i6wk" path="res://assets/placeholders/walk_left/walk_left2.png" id="27_0qpk1"]
[ext_resource type="Texture2D" uid="uid://bar8mfosc3aq2" path="res://assets/placeholders/walk_left/walk_left3.png" id="28_q2es6"]
[ext_resource type="Texture2D" uid="uid://xf0us03i8e2w" path="res://assets/placeholders/walk_left/walk_left4.png" id="29_54pxr"]
[ext_resource type="Texture2D" uid="uid://dmpb4ciysuefg" path="res://assets/placeholders/walk_left/walk_left5.png" id="30_g2wcf"]
[ext_resource type="Texture2D" uid="uid://b1c4nuhrd3sf1" path="res://assets/placeholders/walk_left/walk_left6.png" id="31_6r4fp"]
[ext_resource type="Texture2D" uid="uid://cmtky7slcuexa" path="res://assets/placeholders/walk_left/walk_left7.png" id="32_ljajj"]
[ext_resource type="Texture2D" uid="uid://dt3mi6f55j43x" path="res://assets/placeholders/walk_left/walk_left8.png" id="33_43c57"]
[ext_resource type="Texture2D" uid="uid://gy1q2kq8b4n2" path="res://assets/placeholders/walk_right/walk_right1.png" id="34_3q32x"]
[ext_resource type="Texture2D" uid="uid://b1fxyglt1hni2" path="res://assets/placeholders/walk_right/walk_right2.png" id="35_pcbxn"]
[ext_resource type="Texture2D" uid="uid://duhroq7de7uhi" path="res://assets/placeholders/walk_right/walk_right3.png" id="36_v1igj"]
[ext_resource type="Texture2D" uid="uid://dqst22wfv2qql" path="res://assets/placeholders/walk_right/walk_right4.png" id="37_86a7a"]
[ext_resource type="Texture2D" uid="uid://bily7lkfkka2o" path="res://assets/placeholders/walk_right/walk_right5.png" id="38_gglnd"]
[ext_resource type="Texture2D" uid="uid://buks1brwc8ymc" path="res://assets/placeholders/walk_right/walk_right6.png" id="39_ifgbf"]
[ext_resource type="Texture2D" uid="uid://f6ttwowtvn2n" path="res://assets/placeholders/walk_right/walk_right7.png" id="40_5i8jy"]
[ext_resource type="Texture2D" uid="uid://durpl165m4gw" path="res://assets/placeholders/walk_right/walk_right8.png" id="41_gdxkl"]
[ext_resource type="Texture2D" uid="uid://dqhh0fa3apb28" path="res://assets/placeholders/walk_up/walk_up1.png" id="42_wnpfn"]
[ext_resource type="Texture2D" uid="uid://dao03rl4rljw" path="res://assets/placeholders/walk_up/walk_up2.png" id="43_k5jvr"]
[ext_resource type="Texture2D" uid="uid://b3blecej8omco" path="res://assets/placeholders/walk_up/walk_up3.png" id="44_s2c8j"]
[ext_resource type="Texture2D" uid="uid://cj6dsi4h50q5t" path="res://assets/placeholders/walk_up/walk_up4.png" id="45_6smkn"]
[ext_resource type="Texture2D" uid="uid://ccna16lyt7lm5" path="res://assets/placeholders/walk_up/walk_up5.png" id="46_d67b2"]
[ext_resource type="Texture2D" uid="uid://berw7dadhntpp" path="res://assets/placeholders/walk_up/walk_up6.png" id="47_hqo8j"]
[ext_resource type="Texture2D" uid="uid://c44mt1a1gts33" path="res://assets/placeholders/walk_up/walk_up7.png" id="48_4lmqv"]
[ext_resource type="Texture2D" uid="uid://cy6sqiajiwbt" path="res://assets/placeholders/walk_up/walk_up8.png" id="49_dasrq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7bval"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vkvhv")
}, {
"duration": 1.0,
"texture": ExtResource("3_uamsv")
}, {
"duration": 1.0,
"texture": ExtResource("4_648ut")
}, {
"duration": 1.0,
"texture": ExtResource("5_1vi6g")
}],
"loop": true,
"name": &"idle_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_7qea7")
}, {
"duration": 1.0,
"texture": ExtResource("7_v5uwg")
}, {
"duration": 1.0,
"texture": ExtResource("8_ia44y")
}, {
"duration": 1.0,
"texture": ExtResource("9_bfujb")
}],
"loop": true,
"name": &"idle_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ajheo")
}, {
"duration": 1.0,
"texture": ExtResource("11_pq2pb")
}, {
"duration": 1.0,
"texture": ExtResource("12_t5au2")
}, {
"duration": 1.0,
"texture": ExtResource("13_81aoj")
}],
"loop": true,
"name": &"idle_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_8o83q")
}, {
"duration": 1.0,
"texture": ExtResource("15_qr2d7")
}, {
"duration": 1.0,
"texture": ExtResource("16_ckifb")
}, {
"duration": 1.0,
"texture": ExtResource("17_vf4nu")
}],
"loop": true,
"name": &"idle_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_bk7c1")
}, {
"duration": 1.0,
"texture": ExtResource("19_mvbx2")
}, {
"duration": 1.0,
"texture": ExtResource("20_tlutl")
}, {
"duration": 1.0,
"texture": ExtResource("21_38now")
}, {
"duration": 1.0,
"texture": ExtResource("22_eg6pt")
}, {
"duration": 1.0,
"texture": ExtResource("23_jc55p")
}, {
"duration": 1.0,
"texture": ExtResource("24_wjnsm")
}, {
"duration": 1.0,
"texture": ExtResource("25_vykl2")
}],
"loop": true,
"name": &"walk_down",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_bepsa")
}, {
"duration": 1.0,
"texture": ExtResource("27_0qpk1")
}, {
"duration": 1.0,
"texture": ExtResource("28_q2es6")
}, {
"duration": 1.0,
"texture": ExtResource("29_54pxr")
}, {
"duration": 1.0,
"texture": ExtResource("30_g2wcf")
}, {
"duration": 1.0,
"texture": ExtResource("31_6r4fp")
}, {
"duration": 1.0,
"texture": ExtResource("32_ljajj")
}, {
"duration": 1.0,
"texture": ExtResource("33_43c57")
}],
"loop": true,
"name": &"walk_left",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_3q32x")
}, {
"duration": 1.0,
"texture": ExtResource("35_pcbxn")
}, {
"duration": 1.0,
"texture": ExtResource("36_v1igj")
}, {
"duration": 1.0,
"texture": ExtResource("37_86a7a")
}, {
"duration": 1.0,
"texture": ExtResource("38_gglnd")
}, {
"duration": 1.0,
"texture": ExtResource("39_ifgbf")
}, {
"duration": 1.0,
"texture": ExtResource("40_5i8jy")
}, {
"duration": 1.0,
"texture": ExtResource("41_gdxkl")
}],
"loop": true,
"name": &"walk_right",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_wnpfn")
}, {
"duration": 1.0,
"texture": ExtResource("43_k5jvr")
}, {
"duration": 1.0,
"texture": ExtResource("44_s2c8j")
}, {
"duration": 1.0,
"texture": ExtResource("45_6smkn")
}, {
"duration": 1.0,
"texture": ExtResource("46_d67b2")
}, {
"duration": 1.0,
"texture": ExtResource("47_hqo8j")
}, {
"duration": 1.0,
"texture": ExtResource("48_4lmqv")
}, {
"duration": 1.0,
"texture": ExtResource("49_dasrq")
}],
"loop": true,
"name": &"walk_up",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ns7u"]
size = Vector2(31, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_b4ui5"]
radius = 25.1794

[node name="Player_Honey" type="Node2D"]

[node name="PlayerCharacterBody2D" type="CharacterBody2D" parent="."]
z_index = 2
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_p3yar")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerCharacterBody2D"]
position = Vector2(0.999992, -1.00001)
scale = Vector2(0.55, 0.6)
sprite_frames = SubResource("SpriteFrames_7bval")
animation = &"idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCharacterBody2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(2.5, 15.5)
shape = SubResource("RectangleShape2D_4ns7u")

[node name="Camera2D" type="Camera2D" parent="PlayerCharacterBody2D"]

[node name="PlayerHoney_HitBox" type="Area2D" parent="PlayerCharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCharacterBody2D/PlayerHoney_HitBox"]
position = Vector2(2, 1)
shape = SubResource("CircleShape2D_b4ui5")

[node name="Attack_Cooldown" type="Timer" parent="PlayerCharacterBody2D"]

[connection signal="body_entered" from="PlayerCharacterBody2D/PlayerHoney_HitBox" to="PlayerCharacterBody2D" method="_on_player_honey_hit_box_body_entered"]
[connection signal="body_exited" from="PlayerCharacterBody2D/PlayerHoney_HitBox" to="PlayerCharacterBody2D" method="_on_player_honey_hit_box_body_exited"]
[connection signal="timeout" from="PlayerCharacterBody2D/Attack_Cooldown" to="PlayerCharacterBody2D" method="_on_attack_cooldown_timeout"]
